--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -1,26 +1,59 @@
-.Card-content{
+#Card-content{
     background: radial-gradient(circle at 10% 20%, rgba(239, 87, 87, 0.74) 0%, rgba(245, 123, 13, 0.74) 90.2%);
-    width: 16%;
+    width: 270px;
     height: 300px;
-    border-radius: 16px;
-    
+    border-radius: 16px;    
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    flex-wrap: wrap;
 }
 
-.Card-Pokemon{
-    display: block;
-    margin: auto;
-    background-color: black;
-    width: 92px;
-    height: 92px;
-    border-radius: 50%;
+.Card-Pokemon{       
+    width: 112px;
+    height: 112px;
+    border-radius: 50%;    
+    border: solid 1.5px white;
+    z-index: 1;
+    position: relative;
+    top: 65px;
+    left: 75px;
+    background-image: url(https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c31a.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    
 }
 
-.Card-infos{
-    display: block;
-    margin-top: 32%;
+#Card-content .Card-infos{
+    position: relative;
+    top: 40px;
     width: 100%;
-    height: 120px;
-    background-color: black;
-    border-radius: 0px 0px 16px 16px;
+    height: 150px;
+    background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    border-radius: 0px 0px 16px 16px;    
+}
+
+
+/** Contenue Card-infos */
+
+.Card-infos h1{
+    position: relative;
+    font-size: 1.2em;
+    top: 20px;
+}
+
+.Card-infos .type-pokemon{
+    position: relative;
+    top: 15px;
+    font-size: 0.8em;
+    font-family: 'Roboto';
+}
+
+.Card-infos .localisation-pokemon{
+    position: relative;    
+    top: 25px;
+    right: 80px;
+    font-size: 0.8em;
+    font-family: 'Roboto';
+    font-weight: bold;
+    font-style: italic;
 }
