--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -5,6 +5,7 @@
     border-radius: 16px;    
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     flex-wrap: wrap;
+    transition: 0.4s;
 }
 
 .Card-Pokemon{       
@@ -15,8 +16,7 @@
     z-index: 1;
     position: relative;
     top: 65px;
-    left: 75px;
-    background-image: url(https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c31a.png);
+    left: 75px;   
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -56,4 +56,15 @@
     font-family: 'Roboto';
     font-weight: bold;
     font-style: italic;
+}
+
+.Card-Pokemon .Card-Poke{
+    width: 100%;
+    height:100%;
+    object-fit: contain;
+}
+
+#Card-content:hover{
+    transition: 0.5s;
+    scale: 1.1;    
 }
