--- a/src/Styles/pokedexStyle.css
+++ b/src/Styles/pokedexStyle.css
@@ -34,7 +34,7 @@ body{
     margin: auto;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
     width: 80%;
-    height: 600px;
+    height: auto;
     max-width: 80%;
     max-width: 100%;
     border-radius: 24px;
