--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -6,7 +6,10 @@
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     flex-wrap: wrap;
     transition: 0.4s;
+    position: relative;
+    top: 10px;   
 }
+ 
 
 .Card-Pokemon{       
     width: 112px;
@@ -49,13 +52,19 @@
 }
 
 .Card-infos .localisation-pokemon{
+    background: radial-gradient(circle at 0% 0.5%, rgb(241, 241, 242) 0.1%, rgb(224, 226, 228) 100.2%);
+    color: #000000;
+    width: 45px;
+    padding: 10px;
+    margin: 1px; 
     position: relative;    
-    top: 25px;
-    right: 80px;
+    border-radius: 8px;
+    top: 30px;
+    left: 10px;
     font-size: 0.8em;
     font-family: 'Roboto';
     font-weight: bold;
-    font-style: italic;
+    text-align:center;
 }
 
 .Card-Pokemon .Card-Poke{
