--- a/src/Styles/pokedexStyle.css
+++ b/src/Styles/pokedexStyle.css
@@ -30,8 +30,12 @@ body{
 
 /** Container Carte Pokemon */
 .Container-card{
-    display: block;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;    
+    gap: 40px;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
     width: 80%;
     height: auto;
